--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-cal-consume",
+  "name": "ember-cli-cal-demoapp",
   "dependencies": {
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
@@ -14,6 +14,7 @@
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
     "momentjs": "~2.8.3",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "ember-cli-cal": "~"
   }
 }
