--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "ember-data": "1.0.0-beta.10",
     "express": "^4.8.5",
     "glob": "^4.0.5",
-    "ember-cal": "~"
+    "ember-cli-cal": "~"
   }
 }
