--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
     "momentjs": "~2.8.3",
-    "lodash": "~2.4.1",
-    "ember-cli-cal": "~"
+    "lodash": "~2.4.1"
   }
 }
