--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ember-cal-consume",
-  "version": "0.0.0",
-  "private": true,
+  "name": "ember-cli-cal-demoapp",
+  "version": "0.1.0",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,11 +10,11 @@
     "build": "ember build",
     "test": "ember test"
   },
-  "repository": "https://github.com/stefanpenner/ember-cli",
+  "repository": "https://github.com/netgusto/ember-cli-cal-demoapp",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Net Gusto / Jérôme Schneider",
   "license": "MIT",
   "devDependencies": {
     "body-parser": "^1.2.0",
@@ -29,6 +28,6 @@
     "ember-data": "1.0.0-beta.10",
     "express": "^4.8.5",
     "glob": "^4.0.5",
-    "ember-cli-cal": "~"
+    "ember-cli-cal": "0.1.0"
   }
 }
